--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 [project]
-name = "portugython_victorkolis"
+name = "portugython"
 version = "0.0.1"
 authors = [
   { name="Victor Kolis", email="victorkolis@tirillo.com" },
@@ -20,5 +20,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = ""
+"Homepage" = "https://portugython.io"
 "Bug Tracker" = "https://github.com/pypa/portugython/issues"
