--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "portugython"
-version = "0.0.1"
+version = "0.0.6"
 authors = [
-  { name="Victor Kolis", email="victorkolis@tirillo.com" },
+  { name="Victor Kolis", email="victorkolis@protonmail.com" },
 ]
 maintainers = [
-    { name="Victor Kolis", email="victorkolis@tirillo.com" },
+    { name="Victor Kolis", email="victorkolis@protonmail.com" },
 ]
 description = "A Portuguese translation of the Python functions/modules/packages"
 readme = "README.md"
@@ -20,5 +20,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://portugython.io"
+"Homepage" = "https://github.com/InGnave/portugython"
 "Bug Tracker" = "https://github.com/pypa/portugython/issues"
